<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hrdi.survey.fragment.SetupFragment">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <ImageButton
                    android:id="@+id/img_btn_loadAllData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_download" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:text="ตั้งค่าเริ่มต้นระบบ"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_card"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_card"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_doc"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_doc"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_water"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_water"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_unit"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_unit"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_market"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_market"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_jobactivity"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_jobactivity"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_jobsource"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_jobsource"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_projectarea"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_projectarea"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_extproject"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_extproject"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_mooban"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_mooban"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="5dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_province"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_province"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_amphoe"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_amphoe"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_tambol"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_tambol"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="5dp">



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_planttype"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_planttype"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_plant"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_plant"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_plantdetail"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_plantdetail"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp"
                android:layout_marginTop="5dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_fertilizer"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_fertilizer"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_fertilizercode"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_fertilizercode"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_hormone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_hormonetype"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meta_hormonetype"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_hormone"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="30dp">


                <ImageButton
                    android:id="@+id/ibtn_land3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_image" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ข้อมูลพื้นที่แปลง"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="พื้นที่โครงการ"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:gravity="right" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_Project"
                    android:layout_weight="3" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Load"
                    android:id="@+id/btn_loadSurvey"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="30dp">


                <ImageButton
                    android:id="@+id/ibtn_agri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_profle" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ข้อมูลเกษตรกร"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="40dp"
                android:layout_marginBottom="80dp"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="เกษตรกร"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_import_agri"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="เกษตรกรรายใหม่"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/corner_radius"
                    android:id="@+id/btn_upload_agri"
                    android:textColor="@android:color/white"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
